# zendesk-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/zendesk_mcp_ro/: client.py  config.py  server.py
src/zendesk_mcp_ro/tools/: metrics.py  organizations.py  tickets.py  users.py
tests/: conftest.py
tests/integration/: test_server.py
tests/unit/: test_client.py  test_config.py  test_metrics.py  test_organizations.py  test_tickets.py  test_users.py
