[project]
name = "zendesk-mcp-ro"
version = "0.1.0"
description = "Read-only MCP server for Zendesk — distributed via PyPI, runs locally with uvx"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pip-audit>=2.10.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.13",
]

[project.scripts]
zendesk-mcp-ro = "zendesk_mcp_ro.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
